<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_id"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/emptyErrorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/emptyErrorTextMessage"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold"
            android:visibility="visible" >
        </TextView>

        <TextView
            android:id="@+id/headingExercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold"
            android:visibility="gone" >
        </TextView>

        <TextView
            android:id="@+id/guideHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/guideHeading"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone" >
        </TextView>

        <ImageView
            android:id="@+id/firstImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:contentDescription="@string/imageDescription" >
        </ImageView>

        <ImageView
            android:id="@+id/secondImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:contentDescription="@string/imageDescription" >
        </ImageView>

        <TextView
            android:id="@+id/instructionHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/instructionHeading"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone" >
        </TextView>

        <TextView
            android:id="@+id/instructionDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAlignment="textStart"
            android:textColor="#00FF80"
            android:textSize="18sp" >
        </TextView>
    </LinearLayout>
</ScrollView>